@@ -20,8 +20,11 @@
  */
 package com.redhat.swatch.azure.service;
 
+import static com.redhat.swatch.azure.service.BillableUsageDeadLetterTopicProducer.RETRY_AFTER_HEADER;
 import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.verifyNoInteractions;
@@ -30,6 +33,7 @@ import static org.mockito.Mockito.when;
 import com.redhat.swatch.azure.exception.AzureMarketplaceRequestFailedException;
 import com.redhat.swatch.azure.exception.AzureUsageContextLookupException;
 import com.redhat.swatch.azure.exception.DefaultApiException;
+import com.redhat.swatch.azure.exception.SubscriptionCanNotBeDeterminedException;
 import com.redhat.swatch.azure.exception.SubscriptionRecentlyTerminatedException;
 import com.redhat.swatch.azure.openapi.model.BillableUsage;
 import com.redhat.swatch.azure.openapi.model.BillableUsage.BillingProviderEnum;
@@ -47,16 +51,16 @@ import io.micrometer.core.instrument.MeterRegistry;
 import io.quarkus.test.InjectMock;
 import io.quarkus.test.common.QuarkusTestResource;
 import io.quarkus.test.junit.QuarkusTest;
+import io.smallrye.reactive.messaging.kafka.api.OutgoingKafkaRecordMetadata;
+import io.smallrye.reactive.messaging.memory.InMemoryConnector;
 import jakarta.inject.Inject;
 import jakarta.ws.rs.core.Response;
 import java.math.BigDecimal;
 import java.time.Clock;
-import java.time.Instant;
 import java.time.OffsetDateTime;
-import java.time.ZoneId;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
+import org.eclipse.microprofile.reactive.messaging.spi.Connector;
 import org.eclipse.microprofile.rest.client.inject.RestClient;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -68,25 +72,27 @@ import org.junit.jupiter.api.Test;
 class BillableUsageConsumerTest {
 
   private static final String INSTANCE_HOURS = "INSTANCE_HOURS";
-  private static final String CORES = "CORES";
   private static final String STORAGE_GIB_MONTHS = "STORAGE_GIBIBYTE_MONTHS";
-
-  private static final Clock clock =
-      Clock.fixed(Instant.parse("2023-10-02T12:30:00Z"), ZoneId.of("UTC"));
 
   private static final BillableUsage BASILISK_INSTANCE_HOURS_RECORD =
       new BillableUsage()
           .productId("BASILISK")
-          .snapshotDate(OffsetDateTime.MAX)
           .billingProvider(BillingProviderEnum.AZURE)
           .uom(INSTANCE_HOURS)
           .snapshotDate(OffsetDateTime.now(Clock.systemUTC()))
           .value(new BigDecimal("42.0"));
 
+  private static final BillableUsage BASILISK_INSTANCE_HOURS_RECORD_OLD =
+      new BillableUsage()
+          .productId("BASILISK")
+          .billingProvider(BillingProviderEnum.AZURE)
+          .uom(INSTANCE_HOURS)
+          .snapshotDate(OffsetDateTime.now(Clock.systemUTC()).minusHours(73))
+          .value(new BigDecimal("42.0"));
+
   private static final BillableUsage BASILISK_STORAGE_GIB_MONTHS_RECORD =
       new BillableUsage()
           .productId("BASILISK")
-          .snapshotDate(OffsetDateTime.MAX)
           .billingProvider(BillingProviderEnum.AZURE)
           .uom(STORAGE_GIB_MONTHS)
           .snapshotDate(OffsetDateTime.now(Clock.systemUTC()))
@@ -108,6 +114,11 @@ class BillableUsageConsumerTest {
   Counter rejectedCounter;
   Counter ignoredCounter;
   @Inject BillableUsageConsumer consumer;
+  @Inject BillableUsageDeadLetterTopicProducer deadLetterTopicProducer;
+
+  @Inject
+  @Connector("smallrye-in-memory")
+  InMemoryConnector connector;
 
   @BeforeEach
   void setup() {
@@ -145,6 +156,33 @@ class BillableUsageConsumerTest {
         .thenReturn(MOCK_AZURE_USAGE_CONTEXT);
     consumer.process(BASILISK_INSTANCE_HOURS_RECORD);
     verify(marketplaceService).sendUsageEventToAzureMarketplace(any(UsageEvent.class));
+  }
+
+  @Test
+  void shouldSendMessageToDeadLetterQueueIfSubscriptionNotFound() throws ApiException {
+    var dlq = connector.sink("tally-dlt");
+    dlq.clear();
+    when(internalSubscriptionsApi.getAzureMarketplaceContext(
+            any(), any(), any(), any(), any(), any()))
+        .thenThrow(new SubscriptionCanNotBeDeterminedException(null));
+    consumer.process(BASILISK_INSTANCE_HOURS_RECORD);
+    assertEquals(1, dlq.received().size());
+    var metadata = dlq.received().get(0).getMetadata(OutgoingKafkaRecordMetadata.class);
+    assertTrue(metadata.isPresent());
+    assertNotNull(metadata.get().getHeaders().lastHeader(RETRY_AFTER_HEADER));
+  }
+
+  @Test
+  void shouldNotSendMessageToDeadLetterQueueIfSnapshotDateIsOutOfTheTimeWindow()
+      throws ApiException {
+    var dlq = connector.sink("tally-dlt");
+    dlq.clear();
+
+    when(internalSubscriptionsApi.getAzureMarketplaceContext(
+            any(), any(), any(), any(), any(), any()))
+        .thenThrow(new SubscriptionCanNotBeDeterminedException(null));
+    consumer.process(BASILISK_INSTANCE_HOURS_RECORD_OLD);
+    assertEquals(0, dlq.received().size());
   }
 
   @Test
@@ -211,7 +249,12 @@ class BillableUsageConsumerTest {
   void shouldNotMakeAzureUsageRequestWhenDryRunEnabled() throws ApiException {
     BillableUsageConsumer consumer =
         new BillableUsageConsumer(
-            meterRegistry, internalSubscriptionsApi, marketplaceService, Optional.of(true));
+            meterRegistry,
+            internalSubscriptionsApi,
+            marketplaceService,
+            deadLetterTopicProducer,
+            Optional.of(true),
+            null);
     when(internalSubscriptionsApi.getAzureMarketplaceContext(
             any(), any(), any(), any(), any(), any()))
         .thenReturn(MOCK_AZURE_USAGE_CONTEXT);
@@ -224,7 +267,7 @@ class BillableUsageConsumerTest {
     Errors errors = new Errors();
     Error error = new Error();
     error.setCode("SUBSCRIPTIONS1005");
-    errors.setErrors(Arrays.asList(error));
+    errors.setErrors(List.of(error));
     var response = Response.serverError().entity(errors).build();
     var exception = new DefaultApiException(response, errors);
     when(internalSubscriptionsApi.getAzureMarketplaceContext(
@@ -252,6 +295,25 @@ class BillableUsageConsumerTest {
 
     consumer.process(BASILISK_INSTANCE_HOURS_RECORD);
     verifyNoInteractions(marketplaceService);
+  }
+
+  @Test
+  void shouldThrowSubscriptionNotFoundException() throws ApiException {
+    Errors errors = new Errors();
+    Error error = new Error();
+    error.setCode("SUBSCRIPTIONS1006");
+    errors.setErrors(List.of(error));
+    var response = Response.serverError().entity(errors).build();
+    var exception = new DefaultApiException(response, errors);
+    when(internalSubscriptionsApi.getAzureMarketplaceContext(
+            any(), any(), any(), any(), any(), any()))
+        .thenThrow(exception);
+
+    assertThrows(
+        SubscriptionCanNotBeDeterminedException.class,
+        () -> {
+          consumer.lookupAzureUsageContext(BASILISK_INSTANCE_HOURS_RECORD);
+        });
   }
 
   private static UsageEventOkResponse getDefaultUsageEventResponse() {
